fix: use collect(Collectors.toList())