@@ -11,6 +11,7 @@ import io.camunda.search.clients.query.SearchTermsQuery;
 import io.camunda.search.clients.types.TypedValue;
 import io.camunda.search.transformers.OpensearchTransformers;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.opensearch.client.opensearch._types.query_dsl.QueryBuilders;
 import org.opensearch.client.opensearch._types.query_dsl.TermsQuery;
 import org.opensearch.client.opensearch._types.query_dsl.TermsQueryField;
@@ -32,7 +33,7 @@ public final class TermsQueryTransformer
 
   private <T> TermsQueryField of(final List<TypedValue> values) {
     final var transformer = getFieldValueTransformer();
-    final var fieldValues = values.stream().map(transformer::apply).toList();
+    final var fieldValues = values.stream().map(transformer::apply).collect(Collectors.toList());
     return TermsQueryField.of(f -> f.value(fieldValues));
   }
 }
